hampir selesai tuts 2

--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -14,5 +14,7 @@
 				<tr><td>{{ forloop.counter }}: {{ item.text }} </td></tr>
 			{% endfor %}
 		</table>
+		<h2 style='color:red'> Komentar : </h2>
+		<h3> {{ message|default:"yey, waktunya berlibur" }} </h3>
 	</body>
 </html>
