--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
-{% block header_text %} Start a new To-Do list {% endblock %}
+{% block header_text %} Start a new To-Do list{% endblock %}
 
 {% block form_action %} /lists/new  {% endblock %}
+
+{% block komentar %}   
+<div class="well well-lg" style="background-color:#7DCCB8">
+yey, waktunya berlibur
+</div> 
+{% endblock %}
