--- a/nsuperlists/lists/templates/list.html
+++ b/nsuperlists/lists/templates/list.html
@@ -6,9 +6,16 @@
 
 {% block table %}
 	<table id="id_list_table" class="table table-striped table-hover">
+	<!-- <table id="id_list_table" > -->
 		{% for item in list.item_set.all %}
 		<tr><td> {{ forloop.counter }}: {{item.text}} </td></tr>
 		{% endfor %}
 	</table>
 	
 {% endblock %}
+<br/>
+{% block komentar  %}
+ <div class ="well well-lg" style="background-color:#7DCCB8">
+ {{message}}
+ </div>
+{%  endblock %}
